--- a/styles/globals.css
+++ b/styles/globals.css
@@ -78,6 +78,9 @@ body {
   border-top-left-radius: 2vh;
   border-bottom-left-radius: 2vh;
 }
+.sidebar_link {
+  cursor: default;
+}
 
 .sidebar_menu {
   margin-bottom: 2.75vh;
@@ -86,6 +89,7 @@ body {
   display: flex;
   align-self: stretch;
   justify-content: center;
+  cursor: pointer;
 }
 .sidebar_menu:hover {
   filter: brightness(80%);
@@ -95,6 +99,7 @@ body {
   border-top-right-radius: 2vw;
   border-bottom-right-radius: 2vw;
   box-shadow: inset -5px 5px 5px -5px rgba(0, 0, 0, 0.5);
+  cursor: default;
 }
 .sidebar_menu_on:hover {
   filter: brightness(100%);
@@ -110,6 +115,7 @@ body {
   display: flex;
   align-self: stretch;
   justify-content: center;
+  cursor: pointer;
 }
 .sidebar_clothes:hover {
   filter: brightness(80%);
@@ -119,6 +125,7 @@ body {
   border-top-right-radius: 2vw;
   border-bottom-right-radius: 2vw;
   box-shadow: inset -5px 5px 5px -5px rgba(0, 0, 0, 0.5);
+  cursor: default;
 }
 .sidebar_clothes_on:hover {
   filter: brightness(100%);
@@ -134,6 +141,7 @@ body {
   display: flex;
   align-self: stretch;
   justify-content: center;
+  cursor: pointer;
 }
 .sidebar_cupboard:hover {
   filter: brightness(80%);
@@ -143,6 +151,7 @@ body {
   border-top-right-radius: 2vw;
   border-bottom-right-radius: 2vw;
   box-shadow: inset -5px 5px 5px -5px rgba(0, 0, 0, 0.5);
+  cursor: default;
 }
 .sidebar_cupboard_on:hover {
   filter: brightness(100%);
@@ -158,6 +167,7 @@ body {
   display: flex;
   align-self: stretch;
   justify-content: center;
+  cursor: pointer;
 }
 .sidebar_account:hover {
   filter: brightness(80%);
@@ -167,6 +177,7 @@ body {
   border-top-right-radius: 2vw;
   border-bottom-right-radius: 2vw;
   box-shadow: inset -5px 5px 5px -5px rgba(0, 0, 0, 0.5);
+  cursor: default;
 }
 .sidebar_account_on:hover {
   filter: brightness(100%);
@@ -179,6 +190,7 @@ body {
   position: fixed;
   bottom: 8vh;
   right: 1.5vw;
+  cursor: pointer;
 }
 .sidebar_logout:hover {
   filter: brightness(80%);
