--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -24,6 +24,21 @@
   z-index: -1;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
 }
+@media (max-width: 760px) {
+  .background_circle1 {
+    width: 500px;
+    height: 500px;
+    border-radius: 250px;
+  }
+  .background_circle2 {
+    width: 300px;
+    height: 300px;
+    border-radius: 150px;
+    top: -20%;
+    left: -25%;
+  }
+}
+
 /* #endregion */
 /* #region ----------------LEFT SIDE-------------- */
 .background_left {
@@ -87,16 +102,29 @@
   height: 70vh;
   z-index: 3;
 }
+@media (max-width: 1080px) {
+  .background_down_line {
+    left: 26.75%;
+    width: 42vw;
+  }
+}
+@media (max-width: 760px) {
+  .background_down_line {
+    left: 49.75%;
+    width: 88vw;
+  }
+}
 /* #endregion */
 /* #region ----------------TOP SIDE-------------- */
 .background_up {
   display: flex;
   position: absolute;
-  width: 49vw;
+  width: 48vw;
   height: 10vh;
   top: 6%;
-  left: 25%;
+  left: 24.75%;
   transform: translate(-50%, -50%);
+  z-index: 3;
 }
 .background_up_item {
   display: flex;
@@ -108,18 +136,22 @@
   flex-basis: 13%;
   padding-right: 2%;
 }
+.background_up_img img {
+  height: 100%;
+}
 .background_up_line1 {
   background-color: rgba(0, 0, 0, 0.5);
-  flex-basis: 43%;
+  flex-basis: 23%;
   margin: 4.9vh 0vw;
 }
 .background_up_text {
   flex-basis: 303px;
   font-size: calc(12px + 0.25vw);
-  color: #f98770;
+  -webkit-text-stroke: 1px #d67866;
+  -webkit-text-fill-color: #f98770;
 }
 .background_up_line2 {
-  flex-basis: 9%;
+  flex-basis: 30%;
   background-color: rgba(0, 0, 0, 0.5);
   margin: 4.9vh 0vw;
 }
@@ -132,6 +164,39 @@
   width: 23vw;
   height: 2px;
   z-index: 3;
+}
+@media (max-width: 1080px) {
+  .background_up {
+    display: flex;
+    position: absolute;
+    width: 72vw;
+    height: 10vh;
+    top: 6%;
+    left: 35%;
+    transform: translate(-50%, -50%);
+    z-index: 3;
+  }
+  .background_up_line2 {
+    flex-basis: 30%;
+  }
+  .background_up_line1 {
+    flex-basis: 15%;
+  }
+  .background_up_line3 {
+    left: 101%;
+    transform: translate(-50%, -50%);
+    width: 13vw;
+  }
+}
+@media (max-width: 760px) {
+  .background_up {
+    width: 100vw;
+    left: 50%;
+  }
+  .background_up_line3 {
+    width: 0px;
+    height: 0px;
+  }
 }
 /* #endregion */
 /* #endregion */
@@ -146,27 +211,54 @@
   transform: translate(-50%-50%);
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 .flexbox_main_img {
-  flex-basis: 57.5%;
-  margin-bottom: 2vh;
+  flex-basis: 56.5%;
   display: flex;
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
 }
 .flexbox_main_img img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  max-height: 25vh;
+  max-width: 100%;
 }
 .flexbox_main_text {
-  flex-basis: 42.5%;
-  padding: 0vh 2vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   text-align: center;
-  font-size: calc(10px + 0.3vw);
+  font-style: italic;
+  flex-basis: 43.5%;
+  padding: 0vh 2vw;
+  font-size: 20px;
   font-weight: 500;
-  line-height: 1.3rem;
+  line-height: 2rem;
+}
+@media (max-width: 1080px) {
+  .flexbox_main {
+    width: 60vw;
+    left: 7.1%;
+  }
+}
+@media (max-width: 760px) {
+  .flexbox_main {
+    width: 85vw;
+    left: 7.1%;
+    height: 50vh;
+  }
+}
+@media (max-height: 860px) {
+  .flexbox_main_text {
+    font-size: 18px;
+  }
+}
+@media (max-height: 760px) {
+  .flexbox_main_text {
+    font-size: 16px;
+  }
 }
 /* #endregion */
 /* #region ----------------LOGIN------------------- */
@@ -195,21 +287,23 @@
 
 .flexbox_login_email {
   margin-bottom: 1vh;
-  border-radius: 1vw;
+  border-radius: 5vw;
   background-color: #b1bdb9;
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
   color: white;
+  min-height: 24px;
 }
 .flexbox_login_password {
   margin-bottom: 1vh;
-  border-radius: 1vw;
+  border-radius: 5vw;
   background-color: #b1bdb9;
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
   color: white;
+  min-height: 24px;
 }
 .flexbox_login_log_in {
   margin-bottom: 1vh;
-  border-radius: 1vw;
+  border-radius: 5vw;
   box-sizing: border-box;
   margin-left: 5.25vw;
   margin-right: 5.25vw;
@@ -217,6 +311,7 @@
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
   color: white;
   cursor: pointer;
+  min-height: 24px;
 }
 .flexbox_login_log_in:hover {
   filter: brightness(90%);
@@ -237,6 +332,43 @@
 .flexbox_login_text2:hover {
   text-decoration: underline;
 }
+
+@media (max-width: 1080px) {
+  .flexbox_login {
+    width: 40vw;
+    left: 7.1%;
+  }
+}
+@media (max-width: 760px) {
+  .flexbox_login {
+    width: 65vw;
+    left: 17.1%;
+  }
+}
+@media (max-height: 760px) {
+  .flexbox_login {
+    width: 35vw;
+    left: 10%;
+  }
+}
+@media (max-width: 1080px) and (max-height: 760px) {
+  .flexbox_login {
+    width: 55vw;
+    left: 12.1%;
+  }
+  .flexbox_login_log_in {
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
+  }
+}
+@media (max-width: 760px) and (max-height: 760px) {
+  .flexbox_login {
+    width: 65vw;
+    left: 17.1%;
+  }
+  .flexbox_login_log_in {
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+  }
+}
 /* #endregion */
 /* #region -------------RIGHT IMAGES--------------- */
 .image_right_block {
@@ -249,6 +381,7 @@
   height: 8vh;
   z-index: 2;
 }
+
 .image_left {
   position: absolute;
   top: 87.5%;
@@ -285,6 +418,40 @@
   height: auto;
   margin-bottom: 1.5vh;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+}
+@media (max-width: 1080px) {
+  .images_right img {
+    width: 0vw;
+  }
+  .images_middle {
+    left: 83%;
+  }
+  .images_middle {
+    top: 50%;
+  }
+  .image_left {
+    left: 61.25%;
+  }
+  .image_right_block {
+    width: 0vw;
+    height: 0vh;
+  }
+}
+@media (max-height: 760px) {
+  .image_left {
+    width: 0vw;
+    height: auto;
+  }
+}
+@media (max-width: 760px) {
+  .images_middle img {
+    width: 0vw;
+    height: auto;
+  }
+  .image_left {
+    width: 0vw;
+    height: auto;
+  }
 }
 /* #endregion */
 /* #endregion */
